--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "pixi.js": "^5.1.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-pixi": "^0.9.19",
     "react-scripts": "3.2.0"
   },
   "scripts": {
