--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "pixi.js": "^5.1.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-hot-loader": "^4.12.14",
     "react-pixi": "^0.9.19",
     "react-scripts": "3.2.0"
   },
