--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@inlet/react-pixi": "^1.1.2",
     "pixi.js": "^5.1.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-hot-loader": "^4.12.14",
-    "react-pixi": "^0.9.19",
     "react-scripts": "3.2.0"
   },
   "scripts": {
